--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -207,7 +207,7 @@ img {
 }
 
 .section-wrapper:nth-child(odd) {
-  background: url(images/background.png);
+  background: url(../images/background.png);
   background-repeat: repeat;
 }
 
