--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
         <div id="about-text">
             <div class="section-heading">About Me</div> 
             <h3 class="center-align skills-subsection">
-                정보 활용능력이 좋은<br> 백엔드 개발자가 되고싶은 이원준입니다.
+                정보 활용능력이 좋은<br> 백앤드 개발자가 되고싶은 이원준입니다.
             </h3>
 
             <p class="paragraph-text justify-text">
